--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">just test</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">VPN服务管理系统</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
