--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -1,52 +1,60 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-     <!-- 引入jQuery -->
-    <script type="text/javascript" src="/static/jquery/jquery-mini.js"></script>
-     <!-- 引入 Bootstrap -->
-     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <!-- <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">-->
-      <script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <!-- <script type="text/javascript" src="/static/bootstrap/js/bootstrap.js"></script>-->          
-    <link href="/static/temp/grid.css" rel="stylesheet">
-     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-        <![endif]--> 
-    <title>数据展示平台</title>         
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>首页</title>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/userWeb/css/custom.css">
 </head>
-<body>
-<!-- bootstrap 特性容器 -->
- <div class="container">
-     <h1>Hello, world! </h1> 
-    <div class="row">
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-      <div class="col-md-1">.col-md-1</div>
-    </div>
-    <div class="row">
-      <div class="col-md-8">.col-md-8</div>
-      <div class="col-md-4">.col-md-4</div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">.col-md-4</div>
-      <div class="col-md-4">.col-md-4</div>
-      <div class="col-md-4">.col-md-4</div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">.col-md-6</div>
-      <div class="col-md-6">.col-md-6</div>
-    </div>
- </div>
+<body "document">
+    <div "container-fluid theme-showcase" style="padding:0" role="main">
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" >
+            <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#" >梦想从这里开始</a>
+            </div>
+            <div >
+                <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">首页</a></li>
+                        <li><a href="#">购买服务</a></li>
+                        <li><a href="#">最新消息</a></li>
+                        <li><a href="#">帮助</a></li>
+                        <li class="login"><a href="#" class="btn btn-info btn-lg" role="button">登录</a></li> 
+                        <li class="login"><a href="#" class="regist btn btn-info btn-lg" role="button">注册</a></li> 
+                </ul>
+            </div>
+            </div>
+        </nav>
+        <div class="first-page">
+          <div class="first-view">
+              <h1>我们将带给您最优质的服务</h1>
+              <h2>畅游墙外的世界</h2>
+          </div>
+          <div class="row fast-login">
+              <div class="col-xs-12 col-md-12 col-lg-12 col-center-block">
+                <form class="form-inline" role="form">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <input class="form-control" type="email" placeholder="Enter email">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only" for="exampleInputPassword2">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+                  </div>
+                  <button type="submit" class="btn btn-default">点我注册</button>
+                </form> 
+              </div>
+          </div>
+        </div>
+    </div> <!-- /container -->
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
