--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>首页</title>
     <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="/static/userWeb/css/normalize.css">
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/userWeb/css/custom.css">
+    <link rel="stylesheet" href="/static/userWeb/css/custom_index.css">
 </head>
 <body "document">
     <div "container-fluid theme-showcase" style="padding:0" role="main">
@@ -18,8 +19,8 @@
             </div>
             <div >
                 <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">首页</a></li>
-                        <li><a href="#">购买服务</a></li>
+                        <li><a href="">首页</a></li>
+                        <li><a href="pricing">购买服务</a></li>
                         <li><a href="#">最新消息</a></li>
                         <li><a href="#">帮助</a></li>
                         <li class="login"><a href="#" class="btn btn-info btn-lg" role="button">登录</a></li> 
@@ -27,11 +28,11 @@
                 </ul>
             </div>
             </div>
-        </nav>
+        </nav> 
         <div class="first-page">
           <div class="first-view">
-              <h1>我们将带给您最优质的服务</h1>
-              <h2>畅游墙外的世界</h2>
+              <h1>伟大的的梦想从这里开始</h1>
+              <h2>飞翔的荷兰人</h2>
           </div>
           <div class="row fast-login">
               <div class="col-xs-12 col-md-12 col-lg-12 col-center-block">
@@ -50,6 +51,140 @@
               </div>
           </div>
         </div>
+        <div class="second-page">
+            <div class="pd"><h1>世界的颜色</h1></div>
+            <div class="container-fluid buypage">
+              <div class="row">
+                <div class="product col-xs-4 col-md-4 cols-lg-4">
+                    <div class="buy-box">
+                        <div class="buy-img">
+                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="buy-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-xs-4 col-md-4 cols-lg-4">
+                    <div class="buy-box">
+                        <div class="buy-img">
+                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="buy-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product col-xs-4 col-md-4 cols-lg-4">
+                    <div class="buy-box">
+                        <div class="buy-img">
+                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="buy-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+              </div>  
+            </div>
+        </div>
+        <div class="third-page">
+            <div class="ft"><h1>另一个领域的故事</h1></div>
+            <div class="container-fluid featurepage1">
+              <div class="row">
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+              </div>  
+            </div>
+            <div class="container-fluid featurepage2">
+              <div class="row">
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature col-xs-4 col-md-4 cols-lg-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/media/images/leaf.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <div class="feature-words">
+                            <h3>第一章</h3>
+                            <h4>踏破马蹄无处寻</h4>
+                        </div>
+                    </div>
+                </div>
+              </div>  
+            </div>
+        </div>
+        <div class="fourth-page">
+            <div class="forth-cont">
+                <ul class="list-inline">
+                    <li>
+                        <h2>欢迎您的关注</h2>
+                    </li>
+                    <li>
+                        <button type="button" class="forth-login btn btn-info btn-lg">注册</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <footer>
+            <div class="container-fluid foot">
+                <h5>&copy 2016 django</h5>
+            </div>
+        </footer>
     </div> <!-- /container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
