--- a/templates/userWeb/base.html
+++ b/templates/userWeb/base.html
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav navbar-right">
                         <li><a href="/">首页</a></li>
                         <li><a href="pricing">购买服务</a></li>
-                        <li><a href="#">最新消息</a></li>
+                        <li><a href="news">最新消息</a></li>
                         <li><a href="#">帮助</a></li>
                         <li class="login"><a href="#" class="btn btn-info btn-lg" role="button">登录</a></li> 
                         <li class="login"><a href="#" class="regist btn btn-info btn-lg" role="button">注册</a></li> 
@@ -30,6 +30,18 @@
             </div>
         </nav> 
         {% block content %}{% endblock %}
+        <div class="fourth-page">
+            <div class="forth-cont">
+                <ul class="list-inline">
+                    <li>
+                        <h2>欢迎您的关注</h2>
+                    </li>
+                    <li>
+                        <button type="button" class="forth-login btn btn-info btn-lg">注册</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <footer>
             <div class="container-fluid foot">
                 <h5>&copy 2016 django</h5>
