--- a/templates/userWeb/pricing.html
+++ b/templates/userWeb/pricing.html
@@ -41,4 +41,12 @@
               </div>  
             </div>
         </div>
+        <div class='hr'></div>
+        <div class="pricing_notice">
+            <h1>购买须知</h1>
+            <h2>1.怎样支付</h1>
+                <p>支付宝，微信都可以</p>
+            <h2>2.是否可以使用信用卡付款</h2>
+                <p>可以</p>
+        </div>
 {% endblock %}
