--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -7,15 +7,16 @@
           </div>
           <div class="row fast-login">
               <div class="col-xs-12 col-md-12 col-lg-12 col-center-block">
-                <form class="form-inline" role="form">
+                <form class="form-inline" role="form" method="post" enctype="multipart/form-data">
+                  {% csrf_token %}
                   <div class="form-group">
                     <div class="input-group">
-                      <input class="form-control" type="email" placeholder="Enter email">
+                      <input class="form-control" name="fast-username" type="email" placeholder="Choose an email">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="sr-only" for="exampleInputPassword2">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+                    <input type="password" class="form-control" name="fast-password" id="exampleInputPassword2" placeholder="Choose a Password">
                   </div>
                   <button type="submit" class="btn btn-default">点我注册</button>
                 </form> 
