--- a/templates/userWeb/base.html
+++ b/templates/userWeb/base.html
@@ -23,8 +23,8 @@
                         <li><a href="pricing">购买服务</a></li>
                         <li><a href="news">最新消息</a></li>
                         <li><a href="#">帮助</a></li>
-                        <li class="login"><a href="#" class="btn btn-info btn-lg" role="button">登录</a></li> 
-                        <li class="login"><a href="#" class="regist btn btn-info btn-lg" role="button">注册</a></li> 
+                        <li class="login"><a href="login" class="btn btn-info btn-lg" role="button">登录</a></li> 
+                        <li class="login"><a href="regist" class="regist btn btn-info btn-lg" role="button">注册</a></li> 
                 </ul>
             </div>
             </div>
@@ -51,7 +51,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/static/jquery/jquery.min.js"></script>
 	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
