--- a/templates/userWeb/login.html
+++ b/templates/userWeb/login.html
@@ -49,6 +49,8 @@
                         		</div>
                             </div>
                             <div class="form-bottom">
+                                <div><p style="color: {{ color }}">{{ keywords }}</p>
+                                </div>
 			                    <form role="form" action="" method="post" class="login-form">
                                     {% csrf_token %}
 			                    	<div class="form-group">
