--- a/static/userWeb/css/control/userctrl.css
+++ b/static/userWeb/css/control/userctrl.css
@@ -1,50 +1,50 @@
-
-.navbar-default 
+.myaccount
 {
-  background: rgba(26,166,0,1);
-  padding: 20px;
-  margin:0;
-  font-family: "Microsoft YaHei",微软雅黑;
-  border-color:rgba(26,166,0,1);
+  min-height: 600px;
+  margin-top: 92px;
+  padding-top: 30px;
+  padding-left: 10%;
+  padding-right: 10%;
+/*  background: rgba(226, 226, 226, 0.4); */
 }
 
 
-
-.navbar .navbar-brand, .navbar .navbar-brand:hover, .navbar .navbar-brand:focus
+.myaccount .status
 {
+/*  text-align: center; */
+}
+
+.table tr
+{
+  background-color: #fff;
+}
+
+.table
+{
+    border-top-left-radius:5px;
+    border-top-right-radius:5px;
+}
+
+.header 
+{
+  padding: 10px 0;
+}
+
+.hr
+{
+    height: 1px;
+    background: rgba(0, 0, 0, 0.2);
+    margin-top:10px;
+    margin-bottom:50px;
+}
+
+.man 
+{
+  background: rgba(26, 166, 0, 0.7);
   color: #fff;
 }
 
-.navbar-default .navbar-nav li a
+.control
 {
-  color: rgba(196, 227, 255, 0.8);
-  font-size: 16px;
-}
-
-.nav li
-{
-  padding-left: 20px;
-}
-
-
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover
-{
-  color: #fff;
-}
-
-.navbar-default .navbar-nav>li.login>a:focus, .navbar-default .navbar-nav>li.login>a:hover
-{
-  background-color: #59c323;
-  border-color: #59c323;
-  color: #fff;
-}
-
-
-footer .foot
-{
-  background: #000;
-  color: #fff;
-  text-align: center;
-  height: 80px;
-  padding-top: 20px;
+  font-size: 16px
 }
