--- a/templates/userWeb/control/userctrl.html
+++ b/templates/userWeb/control/userctrl.html
@@ -1,47 +1,58 @@
-<html lang="en">
+{% extends "userWeb/control/cbase.html" %}
+{% block content %}
+<link rel="stylesheet" href="/static/userWeb/css/control/userctrl.css">
+    <div class="container-fluid myaccount">
+        <div class="header"><h2>我的服务</h2></div>
+        <div class="hr"></div>
+        <div class="row">
+            <div class="status col-sm-12 col-md-6  col-lg-6 ">
+                <table class="table table-hover table-bordered">
+                    <tr>
+                      <td colspan="2" style="background:rgba(26, 166, 0, 0.7);color:#fff;">我的状态</td>
+                    </tr>
+                    <tr>
+                      <td>账户名称</td>
+                      <td>{{ username }}</td>
+                    </tr>
+                    <tr>
+                      <td>账户类型</td>
+                      <td>{{ groupname }}</td>
+                    </tr>
+                    <tr>
+                      <td>账户状态</td>
+                      <td style="color: {{ statu_color }}">{{ statu }}</td>
+                    </tr>
+                    <tr>
+                      <td>到期日期</td>
+                      <td>{{ endtime }}</td>
+                    </tr>
+                    <tr>
+                      <td>月总流量</td>
+                      <td>{{ traffic_limits }}</td>
+                    </tr>
+                    <tr>
+                      <td>已用流量</td>
+                      <td>{{ traffic_now }}</td>
+                    </tr>
+                    <tr>
+                      <td>最大连接数</td>
+                      <td>{{ connections_limits }}</td>
+                    </tr>
+                    <tr>
+                      <td>连接数</td>
+                      <td>{{ connections_now }}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="control col-sm-12 col-md-3 col-md-offset-3 col-lg-3 col-lg-offset-3">
+                <ul class="list-group">
+                    <li class="list-group-item man"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;操作</li>
+                    <a href="#" class="list-group-item"><i class="fa fa-key" aria-hidden="true"></i>&nbsp;&nbsp;修改密码</a>
+                    <a href="#" class="list-group-item"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;&nbsp;购买服务</a>
+                    <a href="#" class="list-group-item"><i class="fa fa-file-o" aria-hidden="true"></i>&nbsp;&nbsp;我的订单</a>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
-    <title>首页</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/static/userWeb/css/normalize.css">
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/static/userWeb/css/control/userctrl.css">
-</head>
-<body "document">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="navbar-header">
-         　<!-- .navbar-toggle样式用于toggle收缩的内容，即nav-collapse collapse样式所在元素 -->
-           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-             <span class="sr-only">Toggle Navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-           </button>
-           <!-- 确保无论是宽屏还是窄屏，navbar-brand都显示 -->
-           <a href="userctrl" class="navbar-brand">Dream</a>
-      </div>
-      <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
-      <div class="collapse navbar-collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="##">系列教程</a></li>
-                <li><a href="##">名师介绍</a></li>
-                <li><a href="##">成功案例</a></li>
-                <li><a href="##">关于我们</a></li>
-                <li><span class="navbar-text">{{ username }}
-                    <a href="logout" class="btn btn-default btn-xs" role="button">注销</a>
-                    </span>
-                </li>
-            </ul>
-      </div>
-    </nav>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/jquery/jquery.min.js"></script>
-	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock %}
