--- a/templates/userWeb/control/cbase.html
+++ b/templates/userWeb/control/cbase.html
@@ -11,33 +11,9 @@
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/static/userWeb/css/control/cbase.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/userWeb/js/control/cbase.js">
 </head>
 <body "document">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="navbar-header">
-         　<!-- .navbar-toggle样式用于toggle收缩的内容，即nav-collapse collapse样式所在元素 -->
-           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-             <span class="sr-only">Toggle Navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-           </button>
-           <!-- 确保无论是宽屏还是窄屏，navbar-brand都显示 -->
-           <a href="userctrl" class="navbar-brand">Dream</a>
-      </div>
-      <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
-      <div class="collapse navbar-collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="userctrl">我的账户</a></li>
-                <li><a href="price">购买服务</a></li>
-                <li><a href="##">线路列表</a></li>
-                <li><a href="##">使用指南</a></li>
-                <li><a href="##">常见问题</a></li>
-                <li>Welcome {{ username }}</li>
-                <a href="/logout" class="btn btn-default btn-xs" role="button">注销</a>
-            </ul>
-      </div>
-    </nav>
     {% block content %}{% endblock %}
     <footer>
         <div class="container-fluid foot">
