--- a/templates/userWeb/control/userctrl.html
+++ b/templates/userWeb/control/userctrl.html
@@ -1,11 +1,44 @@
 {% extends "userWeb/control/cbase.html" %}
 {% block content %}
 <link rel="stylesheet" href="/static/userWeb/css/control/userctrl.css">
+    <div class="navbar-wrapper">
+        <div class="container-fluid">
+            <nav class="navbar navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">Logo</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="/control/userctrl" class="">我的服务</a></li>
+                            <li><a href="/control/price">购买服务</a></li>
+                            <li><a href="#">线路列表</a></li>
+                            <li><a href="#">最新消息</a></li>
+                            <li><a href="#">帮助</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav pull-right">
+                            <li><a href="#" >Welcome  {{ username }}</a></li>
+                            <li class=""><a href="/logout">退出登录</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+
     <div class="container-fluid myaccount">
-        <div class="header"><h2>我的服务</h2></div>
-        <div class="hr"></div>
         <div class="row">
-            <div class="status col-sm-12 col-md-6  col-lg-6 ">
+            <div class="header col-sm-12 col-md-6  col-lg-6 col-lg-offset-1"><h2>我的服务</h2></div>
+            <div class="hr col-sm-12 col-md-6  col-lg-10 col-lg-offset-1"></div>
+        </div>
+        <div class="row">
+            <div class="status col-sm-12 col-md-6  col-lg-6 col-lg-offset-1">
                 <table class="table table-hover table-bordered">
                     <tr>
                       <td colspan="2" style="background:rgba(26, 166, 0, 0.7);color:#fff;">我的状态</td>
@@ -44,7 +77,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="control col-sm-12 col-md-3 col-md-offset-3 col-lg-3 col-lg-offset-3">
+            <div class="control col-sm-12 col-md-3 col-md-offset-3 col-lg-3 col-lg-offset-1">
                 <ul class="list-group">
                     <li class="list-group-item man"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;操作</li>
                     <a href="#" class="list-group-item"><i class="fa fa-key" aria-hidden="true"></i>&nbsp;&nbsp;修改密码</a>
