--- a/templates/userWeb/control/price.html
+++ b/templates/userWeb/control/price.html
@@ -34,6 +34,10 @@
     </div>
 
     <section id="pricePlans">
+        <div class="headbar">
+            <h1>购买服务</h1>
+            <div class="hr"></div>
+        </div>
         <ul id="plans">
             <li class="plan">
                 <ul class="planContainer">
