--- a/templates/userWeb/control/userctrl.html
+++ b/templates/userWeb/control/userctrl.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="container-fluid myaccount">
-        <div class="row">
-            <div class="header col-sm-12 col-md-6  col-lg-6 col-lg-offset-1"><h2>我的服务</h2></div>
-            <div class="hr col-sm-12 col-md-6  col-lg-10 col-lg-offset-1"></div>
+        <div class="headbar">
+            <h1>我的服务</h1>
+            <div class="hr"></div>
         </div>
         <div class="row">
             <div class="status col-sm-12 col-md-6  col-lg-6 col-lg-offset-1">
