--- a/templates/userWeb/control/price.html
+++ b/templates/userWeb/control/price.html
@@ -19,8 +19,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="userctrl" class="">我的服务</a></li>
                             <li class="active"><a href="price">购买服务</a></li>
-                            <li><a href="#">线路列表</a></li>
-                            <li><a href="#">最新消息</a></li>
+                            <li><a href="/control/lines">线路列表</a></li>
+                            <li><a href="/control/news">最新消息</a></li>
                             <li><a href="#">帮助</a></li>
                         </ul>
                         <ul class="nav navbar-nav pull-right">
@@ -35,13 +35,13 @@
 
     <section id="pricePlans">
         <div class="headbar">
-            <h1>购买服务</h1>
+            <h2>购买服务</h2>
             <div class="hr"></div>
         </div>
         <ul id="plans">
             <li class="plan">
                 <ul class="planContainer">
-                    <li class="title"><h2>VIP1计划</h2></li>
+                    <li class="title"><h3>VIP1计划</h3></li>
                     <li class="price"><p>10元/<span>月</span></p></li>
                     <li>
                         <ul class="options">
@@ -75,7 +75,7 @@
 
             <li class="plan">
                 <ul class="planContainer">
-                    <li class="title"><h2>VIP3计划</h2></li>
+                    <li class="title"><h3>VIP3计划</h3></li>
                     <li class="price"><p>30元/<span>月</span></p></li>
                     <li>
                         <ul class="options">
@@ -92,7 +92,7 @@
 
             <li class="plan">
                 <ul class="planContainer">
-                    <li class="title"><h2>VIP4计划</h2></li>
+                    <li class="title"><h3>VIP4计划</h3></li>
                     <li class="price"><p>50元/<span>月</span></p></li>
                     <li>
                         <ul class="options">
