--- a/templates/userWeb/control/userctrl.html
+++ b/templates/userWeb/control/userctrl.html
@@ -18,8 +18,8 @@
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="/control/userctrl" class="">我的服务</a></li>
                             <li><a href="/control/price">购买服务</a></li>
-                            <li><a href="#">线路列表</a></li>
-                            <li><a href="#">最新消息</a></li>
+                            <li><a href="/control/lines">线路列表</a></li>
+                            <li><a href="/control/news">最新消息</a></li>
                             <li><a href="#">帮助</a></li>
                         </ul>
                         <ul class="nav navbar-nav pull-right">
@@ -34,7 +34,7 @@
 
     <div class="container-fluid myaccount">
         <div class="headbar">
-            <h1>我的服务</h1>
+            <h2>我的服务</h2>
             <div class="hr"></div>
         </div>
         <div class="row">
