--- a/templates/userWeb/control/cbase.html
+++ b/templates/userWeb/control/cbase.html
@@ -24,6 +24,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/jquery/jquery.min.js"></script>
+    <script src="/static/userWeb/js/control/news.js"></script>
 	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
