--- a/templates/userWeb/base.html
+++ b/templates/userWeb/base.html
@@ -3,32 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
     <title>首页</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/static/userWeb/css/normalize.css">
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/userWeb/css/custom_index.css">
+    <link rel="stylesheet" href="/static/userWeb/css/base.css">
 </head>
 <body "document">
-    <div "container-fluid theme-showcase" style="padding:0" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" >
-            <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/" >梦想从这里开始</a>
-            </div>
-            <div >
-                <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">首页</a></li>
-                        <li><a href="pricing">购买服务</a></li>
-                        <li><a href="news">最新消息</a></li>
-                        <li><a href="#">帮助</a></li>
-                        <li class="login"><a href="login" class="btn btn-info btn-lg" role="button">登录</a></li> 
-                        <li class="login"><a href="regist" class="regist btn btn-info btn-lg" role="button">注册</a></li> 
-                </ul>
-            </div>
-            </div>
-        </nav> 
         {% block content %}{% endblock %}
         <div class="fourth-page">
             <div class="forth-cont">
@@ -47,11 +30,13 @@
                 <h5>&copy 2016 django</h5>
             </div>
         </footer>
-    </div> <!-- /container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/jquery/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/hammer.js/2.0.8/hammer.min.js"></script>
+    <script src="/static/userWeb/js/carousel.js"></script>
 	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/userWeb/js/control/cbase.js"></script>
 </body>
 </html>
