--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -1,67 +1,175 @@
 {% extends "userWeb/base.html" %}
 {% block content %}
-      <div class="first-page">
-          <div class="first-view">
-              <h1>伟大的的梦想从这里开始</h1>
-              <h2>飞翔的荷兰人</h2>
+      <link rel="stylesheet" href="/static/userWeb/css/custom_index.css">
+      <link rel="stylesheet" href="/static/userWeb/css/custom_price.css">
+      <div class="navbar-wrapper">
+          <div class="container-fluid">
+              <nav class="navbar navbar-fixed-top">
+                  <div class="container">
+                      <div class="navbar-header">
+                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          </button>
+                          <a class="navbar-brand" href="#">Logo</a>
+                      </div>
+                      <div id="navbar" class="navbar-collapse collapse">
+                          <ul class="nav navbar-nav">
+                              <li class="active"><a href="index" class="">主页</a></li>
+                              <li><a href="price">购买套餐</a></li>
+                              <li><a href="news">最新消息</a></li>
+                              <li><a href="#">帮助</a></li>
+                          </ul>
+                          <ul class="nav navbar-nav pull-right">
+                            <li><a href="login">登录</a></li> 
+                            <li><a href="regist">注册</a></li>
+
+                          </ul>
+                      </div>
+                  </div>
+              </nav>
           </div>
-          <div class="row fast-login">
-              <div class="col-xs-12 col-md-12 col-lg-12 col-center-block">
+      </div>
+
+      <div class="first-page">
+
+        <div id="carousel-show" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-show" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-show" data-slide-to="1"></li>
+            <li data-target="#carousel-show" data-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item active">
+              <a href="#"><img src="http://image.tianjimedia.com/uploadImages/2012/013/3SV2G5B11S78.jpg" /></a>
+              <div class="carousel-caption">
+                <h3>Logo</h3>
+                <p>您最佳的选择</p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#"><img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/03/02/d6c43695c7542cb412dc5e4c487edfc7.jpg" /></a>
+              <div class="carousel-caption">
+                <h3>Meow</h3>
+                <p>Just Kitten Around</p>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#"><img src="http://pic.90sjimg.com/back_pic/00/04/20/33/18fb6214433867103e3990a1022cdc9a.jpg" /></a>
+              <div class="carousel-caption">
+                <h3>Meow</h3>
+                <p>Just Kitten Around</p>
+              </div>
+            </div>
+          </div>
+
+          <a class="left carousel-control" href="#carousel-show" data-slide="prev">
+          </a>
+          <a class="right carousel-control" href="#carousel-show" data-slide="next">
+          </a>
+        </div>
+        
+        <div class="fast-login">
+          <div class="row">
+              <div class="formword col-xs-12 col-md-4  col-lg-4 ">
+                  <h3>立即注册，体验墙外阳光</h3>
+              </div>
+              <div class="col-xs-12 col-md-8 col-lg-8 col-center-block">
                 <form class="form-inline" role="form" method="post" enctype="multipart/form-data">
                   {% csrf_token %}
                   <div class="form-group">
-                    <div class="input-group">
                       <input class="form-control" name="fast-username" type="email" placeholder="Choose an email">
-                    </div>
                   </div>
                   <div class="form-group">
                     <label class="sr-only" for="exampleInputPassword2">Password</label>
-                    <input type="password" class="form-control" name="fast-password" id="exampleInputPassword2" placeholder="Choose a Password">
+                        <input type="password" class="form-control" name="fast-password" id="exampleInputPassword2" placeholder="Choose a Password">
                   </div>
-                  <button type="submit" class="btn btn-default">点我注册</button>
+                  <button type="submit" class="btn btn-default btn-lg">点我注册</button>
                 </form> 
               </div>
           </div>
+          </div>  
         </div>
         <div class="second-page">
-            <div class="pd"><h1>世界的颜色</h1></div>
-            <div class="container-fluid buypage">
-              <div class="row">
-                <div class="product col-xs-4 col-md-4 cols-lg-4">
-                    <div class="buy-box">
-                        <div class="buy-img">
-                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="buy-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
+
+            <div class="container-fluid">
+                    <div class="row">
+                            <div class="col-sm-6 col-md-4 col-lg-4">
+                                    <div class="panel panel-success">
+                                            <div class="panel-heading">
+                                                    <h3 class="text-center">入门计划</h3>
+                                                    <p class="text-center">流量限制计划</p>
+                                            </div>
+                                            <div class="panel-body text-center">
+                                                    <p class="lead" style="font-size:30px"><strong>15元/月</strong></p>
+                                            </div>
+                                            <ul class="list-group list-group-flush text-center">
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                    </li>
+                                            </ul>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                    </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4">
+                                    <div class="panel panel-success">
+                                            <div class="panel-heading">
+                                                    <h3 class="text-center">LARGE TEAM</h3>
+                                                    <p class="text-center">MAX TEAM SIZE 100</p>
+                                            </div>
+                                            <div class="panel-body text-center">
+                                                    <p class="lead" style="font-size:30px"><strong>$60/month</strong></p>
+                                            </div>
+                                            <ul class="list-group list-group-flush text-center">
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                    </li>
+                                            </ul>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                    </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4">
+                                    <div class="panel panel-success">
+                                            <div class="panel-heading">
+                                                    <h3 class="text-center">LARGE TEAM</h3>
+                                                    <p class="text-center">MAX TEAM SIZE 100</p>
+                                            </div>
+                                            <div class="panel-body text-center">
+                                                    <p class="lead" style="font-size:30px"><strong>$60/month</strong></p>
+                                            </div>
+                                            <ul class="list-group list-group-flush text-center">
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-calendar"></span> Unlimited Events
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-envelope"></span> Unlimited Email Invitations
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                            <span class="glyphicon glyphicon-heart"></span> Fantastic Support
+                                                    </li>
+                                            </ul>
+                                            <div class="panel-footer"> <a class="btn btn-lg btn-block btn-danger" href="#">SUBSCRIBE</a> </div>
+                                    </div>
+                            </div>
                     </div>
-                </div>
-                <div class="product col-xs-4 col-md-4 cols-lg-4">
-                    <div class="buy-box">
-                        <div class="buy-img">
-                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="buy-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="product col-xs-4 col-md-4 cols-lg-4">
-                    <div class="buy-box">
-                        <div class="buy-img">
-                            <img src="/media/images/wood.png" class="img-responsive" alt="Responsive image">
-                        </div>
-                        <div class="buy-words">
-                            <h3>第一章</h3>
-                            <h4>踏破马蹄无处寻</h4>
-                        </div>
-                    </div>
-                </div>
-              </div>  
             </div>
+
+
         </div>
         <div class="third-page">
             <div class="ft"><h1>另一个领域的故事</h1></div>
